--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -91,7 +91,11 @@
   background-position: top;
   height: 15vh;
   background-image: url('VAGUE.png');
+  margin-bottom: -4vh;
+  margin-left: -14vh;
+  width: 200vh;
 }
+
 .vague-showpro {
   height: 10vh;
   background-image: url('VAGUE.png');
