--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
 </div>
 
 
-<div class="fold container pb-1 position-relative">
+<div class="fold container pb-1 position-relative" style="margin-bottom: 180px">
   <div class="font-size-28 text-center">
 
     <h2> Feeling uninspired ? Here are some recommendations for you </h2>
@@ -129,5 +129,3 @@
       </div>
     <% end %>
   </div>
-
-<div class="vague"></div>
