--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,7 @@
-<div class="footer">
+<div class="footer position-relative">
+  <% if params[:action] == 'home' %>
+    <div class="vague position-absolute"></div>
+  <% end %>
   <div class="footer-links">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
