--- a/app/assets/stylesheets/pages/_show_booking.scss
+++ b/app/assets/stylesheets/pages/_show_booking.scss
@@ -151,3 +151,9 @@
     vertical-align: baseline;
     border-radius: 2px;
 }
+
+.title-messager {
+  color: $deep_blue;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #9aa0b1;
+}
