--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -69,7 +69,7 @@
     <div class="mt-3 justify-content-between">
           <% if @booking.methods.include?(:messages) %>
       <div class="container mt-5">
-        <h1 id="messenger">Messagerie:</h1>
+        <div class="title-messager"><h3 id="messenger"><i class="fa-solid fa-comments"></i> Messagerie:</h3></div>
         <div class="messages">
           <% @booking.messages.each do |message| %>
             <div id="message-<%= message.id %>">
