--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -101,3 +101,10 @@
 </div>
 <%# modèle à adapter ->  %>
 <%# <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
+
+<%# <div>
+<p>
+<%=link_to "Add a review", new_booking_review_path(@pro), class:"btn btn-primary" do %>
+<%# <% end %>
+<%# </p>
+</div>  %>
