add logo & fav icon

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,9 +14,9 @@
     .navbar-collapse {
       flex-grow: 0;
     }
-    .navbar-brand img {
-      width: 40px;
-    }
+    // .navbar-brand img {
+    //   width: 40px;
+    // }
     .btn-pro {
       margin-left: -10px;
       color: $red;
