--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Scuba Libre || Discover the underwater world wherever you are</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:image" content="https://res.cloudinary.com/dtohrmf4g/image/upload/v1654680149/bobbi-wu-3_h9trxhQmY-unsplash_yvrni8.jpg"/>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag %>
