--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,12 +4,17 @@
       <h1><%= @booking.offer.name %></h1>
       <h3><%=@booking.offer.user.first_name%> <%= @booking.offer.user.last_name%></h3>
       <h5><i class="fa-solid fa-location-pin"></i> <%= @booking.location%></h3>
-      <h4><span class="badge-pending bg-white mt-1"><i class="fa-solid fa-spinner color-$deepblue"></i> Status: <%=@booking.status%></span></h4>
+      <h4><span class="badge-pending bg-white mt-1"> Status: <%= @booking.status %></span></h4>
     </div>
     <div class="wave">
       <%= image_tag 'wave-02.png', class: 'position-absolute bottom-0 end-0 w-50' %>
     </div>
     <div class="atcb" style="display:none;"></div>
+  </div>
+  <div>
+    <%if !current_user.pro? && DateTime.now > @booking.end_at %>
+      <%= link_to "Add a review", new_booking_review_path(@booking), class:"btn btn-primary" %>
+    <%end %>
   </div>
 </div>
 
@@ -58,11 +63,16 @@
         <p><%= @booking.offer.prerequisites %></p>
         <h5><u>Included:</u></h5>
         <p><%= @booking.offer.included %></p>
-        <h5><u>Contact:</u></h5>
-        <h6>Teacher:</h6>
-        <p><%= @booking.offer.user.email %></p>
-        <h5><u>Booker:</u></h5>
-        <p><%= @booking.user.email %></p>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title"><u>Contact</u></h5>
+            <h6 class="card-subtitle mb-2 text-muted">Teacher</h6>
+            <p><i><%= @booking.offer.user.email %></i></p>
+            <h6 class="card-subtitle mb-2 text-muted">Booker</h6>
+            <p class="card-text"><i><%= @booking.user.email %></i></p>
+          </div>
+        </div>
+    <%= link_to "Back", :back, class: "btn btn-secondary" %>
     </div>
 
   <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
@@ -99,12 +109,6 @@
     </div>
   </div>
 </div>
-<%# modèle à adapter ->  %>
-<%# <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
 
-<%# <div>
-<p>
-<%=link_to "Add a review", new_booking_review_path(@pro), class:"btn btn-primary" do %>
-<%# <% end %>
-<%# </p>
-</div>  %>
+
+<%# <i class="fa-solid fa-spinner color-$deepblue"></i> %>
