--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,15 +2,15 @@
   <div class="row align-items-center justify-content-between">
     <div class="col-6 banner-booking-info">
       <h1><%= @offer.name %></h1>
-      <h3>With: <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
+      <h3>with <%=@offer.user.first_name%> <%= @offer.user.last_name%></h3>
       <h5><i class="fa-solid fa-location-dot"></i> <%= @offer.user.location%></h5>
+      <h3><i><%= @offer.currency %> <%= @offer.price %></i></h3>
     </div>
     <div class="col-6 wave">
     <%= image_tag 'wave-01.png', class: 'position-absolute bottom-0 end-0 w-50' %>
     </div>
   </div>
 </div>
-
 <div class="d-flex w-100 align-items-start">
   <div class="w-75 p-5">
     <div class="d-flex justify-content-between infos-offer">
@@ -56,15 +56,16 @@
     <p><%= @offer.included %></p>
     <h5><u>Prerequisites</u></h5>
     <p><%= @offer.prerequisites %></p>
+    <%= link_to "Back", :back, class: "btn btn-secondary" %>
   </div>
   <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
     <div class="mt-3 justify-content-between">
-      <h4>Book a session:</h4>
+      <h4>When do you want to dive?</h4>
       <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
         <%= f.error_notification %>
         <div class=" align-items-center">
           <div class="mb-3 me-3 string optional start_at">
-            <%= f.input :start_at, as: :string, input_html: { class: "start_at", data: {flatpickr_target: "dateInput"} } %>
+            <%= f.input :start_at, as: :string, label: false, input_html: { class: "start_at", data: {flatpickr_target: "dateInput"} } %>
           </div>
           <%= f.submit 'Book dive', class: "btn btn-primary" %>
         </div>
