--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,8 +2,8 @@
   width: 230px;
   height: 220px;
   object-fit: cover;
-  border-radius: 2%;
-  border: none;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.317);
 }
 
 
