--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -1,5 +1,8 @@
-<div class="banner-show-pro d-flex">
-  <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
+<div class="banner-show-pro d-flex align-items-center">
+  <div>
+    <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
+    <p class="mx-5"><i style="font-size: 30px;" class="fa-brands fa-instagram"></i></p>
+  </div>
   <div class="banner-pro-info">
     <h1><%= @pro.first_name %> <%= @pro.last_name[0].capitalize%>.</h1>
     <div class="d-flex">
@@ -10,7 +13,6 @@
     <p><i class="fa-solid fa-location-dot"></i></i> <%= @pro.location %></p>
     <div class="d-flex align-items-center">
       <p><%= @pro.bio%></p>
-      <p class="mx-5"><i style="font-size: 50px; color:orange;" class="fa-brands fa-instagram-square"></i></p>
     </div>
   </div>
 
