--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -2,25 +2,25 @@
   <div class="cards mx-5 mb-5">
   <% @bookings_user.each do |b| %>
 
-      <div class="card-pro shadow-sm p-2">
+      <div class="card-pro shadow-sm p-4">
 
 
-        <div class="card-infos">
+        <div class="card-valide-booking">
           <h5><%= b.offer.name %></h5>
-          <p><span class="badge badge-pill">Status</span><strong> <%=b.status %></strong></p>
-          <p><span class="badge badge-pill">Pro</span> <%=b.offer.user.first_name %></p>
-          <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
-          <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
-          <p><span class="badge badge-pill">Price</span> <%= b.currency %> <%= b.amount %></p>
+          <p><span class="badge-load bg-deep_blue mt-1"><i class="fa-solid fa-spinner color-white"></i> Status<strong> <%=b.status %></strong></p>
+          <p>Pro <%=b.offer.user.first_name %></p>
+          <p><span class="mt-1">Start date<%= b.start_at %></p>
+          <p><i style=" margin-top: 8px; font-size: 16px; color:$deep_blue;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
+          <p><strong><%= b.amount %> <%= b.currency %></strong><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
         </div>
 
           <% if b.status == "pending"  %>
             <div class="buttons d-grid">
-              <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
+              <%# <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i> %>
             </div>
-            <div class="text-center">
-              <%= link_to "Details", booking_path(b), class: "btn btn-outline-success" %>
-              <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-warning" %>
+            <div>
+              <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+              <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-cancel" %>
             </div>
           <% end %>
           <% if b.status == "cancelled"  %>
@@ -62,8 +62,8 @@
               <div class="buttons d-grid">
                 <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
               </div>
-              <div class="text-center">
-                <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-success" %>
+              <div >
+                <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-variant" %>
                 <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
               </div>
             <% end %>
