--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -8,7 +8,7 @@
             <%= text_field_tag :query,
               params[:query],
               class: "form-control",
-              placeholder: "Search for a pro"
+              placeholder: "Search a pro"
             %>
           <button name="button" type="submit" class="btn btn-primary">
             <i class="fas fa-search"></i>
