--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -9,8 +9,9 @@
         <p><% @pro.languages.each do |l|%>
         <span class="badge badge-pill"><%= l %></span>
         <% end %></p>
-      </div>
+    </div>
     <p><i class="fa-solid fa-location-dot"></i></i> <%= @pro.location %></p>
+    <p><span class="font-weight-normal"><%= @booking.rating %><i class="fas fa-star star-yellow"></i></span></p>
     <div class="d-flex align-items-center">
       <p><%= @pro.bio%></p>
     </div>
