--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -50,3 +50,11 @@
   border-radius: .5rem;
   margin-top: 20px
 }
+
+.btn-deny{
+  font-weight: 600;
+  color: $red;
+  border-color: $red;
+  border-radius: .5rem;
+  margin-top: 20px
+}
