--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -7,9 +7,12 @@
 
         <div class="card-valide-booking">
           <h5><%= b.offer.name %></h5>
-          <p><span class="badge-load bg-deep_blue mt-1"><i class="fa-solid fa-spinner color-white"></i> Status<strong> <%=b.status %></strong></p>
+          <p><span class="badge-load bg-deep_blue mt-1">
+
+          </i> Status<strong> <%=b.status %></strong>
+          </p>
           <p>Pro <%=b.offer.user.first_name %></p>
-          <p><span class="mt-1">Start date<%= b.start_at %></p>
+          <p><span class="mt-1">Start date <%= b.start_at %></p>
           <p><i style=" margin-top: 8px; font-size: 16px; color:$deep_blue;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
           <p><strong><%= b.amount %> <%= b.currency %></strong><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
         </div>
@@ -25,16 +28,19 @@
           <% end %>
           <% if b.status == "cancelled"  %>
             <div class="buttons d-grid">
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
               <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
             </div>
           <% end %>
           <% if b.status == "accepted"  %>
               <div class="buttons d-grid">
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
                 <i style="font-size: 25px; color:green;" class="fa-solid fa-face-smile"></i>
               </div>
           <% end %>
           <% if b.status == "denied"  %>
               <div class="buttons d-grid">
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
                 <i style="font-size: 25px; color:red;" class="fa-solid fa-face-frown"></i>
               </div>
           <% end %>
@@ -49,22 +55,21 @@
 
     <div class="cards mx-5 mb-5">
       <% @bookings_owner.each do |b| %>
-        <div class="card-pro shadow-sm p-2">
-          <div class="card-infos">
+        <div class="card-pro shadow-sm p-4">
+          <div class="card-valide-booking">
             <h5><%= b.offer.name %></h5>
-            <p><span class="badge badge-pill">Status</span><strong> <%=b.status %></strong></p>
-            <p><span class="badge badge-pill">Pro</span> <%=b.user.first_name %></p>
-            <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
-            <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
-            <p><span class="badge badge-pill">Price</span> <%= b.currency %> <%= b.amount %></p>
+            <p>Status<strong> <%=b.status %></strong></p>
+            <p>Pro <%=b.user.first_name %></p>
+            <p>Start date <%= b.start_at %></p>
+            <p><i style=" margin-top: 8px; font-size: 16px; color:$deep_blue;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
+            <p><strong><%= b.currency %> <%= b.amount %></strong></p>
           </div>
           <% if b.status == "pending"  %>
               <div class="buttons d-grid">
-                <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
               </div>
               <div >
                 <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-variant" %>
-                <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+                <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-deny" %>
               </div>
             <% end %>
             <% if b.status == "cancelled"  %>
