--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <%= video_tag "https://res.cloudinary.com/dtohrmf4g/video/upload/v1654167319/aquarium_-_109184_Original_pgrubc.mp4", autoplay: true, muted: true, loop: true, id: "background-video" %>
 <div class="container">
   <div class="banner" >
-    <h1>Welcome to ScubaLibre</h1>
+    <h1>Welcome to Scuba Libre</h1>
     <p>Find a scuba instructor for your next dive!</p>
     <div class="search col-sm-9 col-md-6 col-lg-6">
       <%= form_tag pros_path, method: :get, class: "d-flex" do %>
@@ -25,8 +25,8 @@
   <div class="container d-flex">
     <div class="w-50 px-5 border-end">
       <h2 class="font-size-28 pb-5 text-center">About us</h2>
-      <p class="font-size-18 text-align-justify">Founded by divers and ocean lovers, ScubaLibre allows you to explore the underwater world the easiest way possible.
-      Whether you're eager to learn how to dive or you want to perfect your skills, our members will find the best option for you !</p>
+      <p class="font-size-18 text-align-justify">Founded by divers and ocean lovers, Scuba Libre allows you to explore the underwater world the easiest way possible.
+      Whether you're eager to learn how to dive or you want to perfect your skills, our members will find the best option for you!</p>
     </div>
     <div class="w-50 px-5">
       <h2 class="font-size-28 pb-5 text-center">Scuba Libre and the environment</h2>
@@ -40,7 +40,7 @@
 <div class="fold container pb-1 position-relative" style="margin-bottom: 180px">
   <div class="font-size-28 text-center">
 
-    <h2> Feeling uninspired ? Here are some recommendations for you </h2>
+    <h2 class="mb-5"> Feeling uninspired ? Here are some recommendations for you </h2>
   </div>
 
   <div class="cards d-flex px-5 py-3 fold">
