--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -24,6 +24,32 @@
     }
 }
 
+.search-price {
+  border: none;
+  border-radius: 100px;
+  background-color: white;
+  display: block;
+  // padding: 0px 10px 0px 10px;
+  border: 1px solid #e7e7e9;
+  justify-content: left !important;
+    i {
+      color: darkgreen;
+    }
+    .form-control {
+      border: none;
+      border-radius: 25px;
+      background-color: white;
+      &:focus {
+      box-shadow: none;
+      }
+    }
+    .btn-primary {
+      border-radius: 100px;
+      margin: 3px;
+      margin-left: 40px;
+    }
+}
+
 .search-lite {
   border: none;
   border-radius: 100px;
