--- a/app/assets/stylesheets/pages/_show_pros.scss
+++ b/app/assets/stylesheets/pages/_show_pros.scss
@@ -21,7 +21,7 @@
 // CSS SUR LES CARDS DES OFFRES DANS LA SHOW DU PRO
 
 .offers {
-  margin: 0 15%;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   flex-grow: 1;
