--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -21,8 +21,8 @@
   <div class="mt-3 ms-3">
     <%= link_to "Back", :back, class: "btn btn-secondary" %>
   </div>
-<div class="d-flex ms-5">
-  <div>
+<div class="d-flex px-5">
+  <div class="col-4 px-5">
     <strong>
     <p>Category</p>
     <div class="mb-3">
@@ -31,11 +31,13 @@
       <%= link_to "Specialty Training", pro_path(@pro, category:"Specialty Training", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Specialty Training"}" %>
     </div>
     <p>Level</p>
-    <div class="d-flex mb-3">
+    <div class="mb-3">
       <%= link_to "Beginner", pro_path(@pro, level:"Beginner", category: params[:category], query: params[:query]), class: "btn btn-success #{"active" if params[:level] == "Beginner"}" %>
       <%= link_to "Advanced", pro_path(@pro, level:"Advanced", category: params[:category], query: params[:query]), class: "btn btn-success #{"active" if params[:level] == "Advanced"}" %>
     </div>
     <p>Price</p>
+    </strong>
+    <div class="search-price col-sm-9 col-md-6 col-lg-6">
     <%= form_tag pro_path(@pro), method: :get, class: "d-flex" do %>
       <%= text_field_tag :query,
         params[:query],
@@ -44,11 +46,14 @@
       %>
       <%= hidden_field_tag :category, params[:category] %>
       <%= hidden_field_tag :level, params[:level] %>
-      <%= submit_tag "Search", class: "btn btn-success #{"active" if params[:query] == params[:query]}" %>
+      <button name="button" type="submit" class="btn btn-success">
+          <i class="fas fa-search"></i>
+      </button>
+
     <% end %>
-    </strong>
+    </div>
   </div>
-  <div class="offers">
+  <div class="offers px-5">
       <h2 class="mx-4">Experiences</h2>
       <% @offers.each do |o| %>
 
