--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,3 +8,10 @@
   height: 350px;
   margin: 10px auto;
 }
+
+.banner-index-pro {
+  color: white;
+  padding: 70px;
+  background-color: $deep_blue;
+  background-size: cover;
+}
