map ok + tentative de fix le add to calendar button

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -6,6 +6,7 @@
   padding: 10px 10px 10px 20px;
   border: 1px solid #e7e7e9;
   justify-content: left !important;
+  min-width: 450px;
     i {
       color: white;
     }
