--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "flatpickr/dist/flatpickr";
 @import "simple_calendar";
 @import "jquery-bar-rating/dist/themes/css-stars";
+@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
 
 
 // Your CSS partials
