--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,19 +2,21 @@
   <%= video_tag "https://res.cloudinary.com/dtohrmf4g/video/upload/v1654167319/aquarium_-_109184_Original_pgrubc.mp4", autoplay: true, muted: true, loop: true, id: "background-video" %>
 <div class="container">
   <div class="banner" >
-    <h1>Welcome to Scuba Libre</h1>
-    <p>Find a scuba instructor for your next dive!</p>
-    <div class="search col-sm-6 col-md-6 col-lg-4">
-      <%= form_tag pros_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-            params[:query],
-            class: "form-control",
-            placeholder: "Where do you want to dive?"
-        %>
-        <button name="button" type="submit" class="btn btn-primary">
-          <i class="fas fa-search"></i>
-        </button>
-      <% end %>
+    <div class="home">
+      <h1>Welcome to Scuba Libre</h1>
+      <p>Find a scuba instructor for your next dive!</p>
+      <div class="search col-sm-6 col-md-6 col-lg-4">
+        <%= form_tag pros_path, method: :get, class: "d-flex" do %>
+          <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Where do you want to dive?"
+          %>
+          <button name="button" type="submit" class="btn btn-primary">
+            <i class="fas fa-search"></i>
+          </button>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
