--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <% if current_user.pro? %>
-  <div class="container mt-3">
+  <div class="mt-3">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation" >
         <button class="nav-link active" id="calendar-tab" data-bs-toggle="tab" data-bs-target="#calendar" type="button" role="tab" aria-controls="home" aria-selected="true">Calendar</button>
