--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,7 +1,7 @@
 // Cards de l'index des pros
 .cards{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 15px;
   padding :15px;
   flex-grow: 1;
@@ -14,7 +14,7 @@
   overflow: hidden;
   background: transparent;
   // box-shadow: 0px 4px;
-  margin-top: 10px;
+  // margin-top: 5px;
   border-radius: 5px;
 
   // .image-pro {
