--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,90 +1,95 @@
-  <h3 class="mx-5 mt-5">YOUR BOOKINGS</h3>
-  <div class="cards mx-5 mb-5">
-  <% @bookings_user.each do |b| %>
+<div class="row">
+  <div class="col">
+    <h3 class="mt-3 mx-5">YOUR BOOKINGS</h3>
+    <div class="cards">
+      <% @bookings_user.each do |b| %>
 
-      <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020;">
+        <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020; background-color: #DBE2F4">
 
-
-        <div class="card-valide-booking ">
-          <h5><%= b.offer.name %></h5>
-          <div><span class="badge bg-custom align-center" style="background: #01123C; color:white; font-size: 13px "></i> Status:<strong> <%=b.status %></strong></span></div>
-          <p>Pro <%=b.offer.user.first_name %></p>
-          <p><span class="mt-1">Start date <%= b.start_at %></p>
-          <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i><strong> Location <%= b.location %></strong></p>
-          <p><strong><%= b.amount %> <%= b.currency %></strong><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
-        </div>
-
-          <% if b.status == "pending"  %>
-            <div class="buttons d-grid">
-              <%# <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i> %>
-            </div>
-            <div>
-              <%= link_to "Details", booking_path(b), class: "btn btn-variant justify-content-center" %>
-              <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-cancel"%>
-            </div>
-          <% end %>
-          <% if b.status == "cancelled"  %>
-            <div class="buttons d-grid">
-                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
-              <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
-            </div>
-          <% end %>
-          <% if b.status == "accepted"  %>
-              <div class="buttons d-grid">
-                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
-                <i style="font-size: 25px; color:green;" class="fa-solid fa-face-smile"></i>
-              </div>
-          <% end %>
-          <% if b.status == "denied"  %>
-              <div class="buttons d-grid">
-                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
-                <i style="font-size: 25px; color:red;" class="fa-solid fa-face-frown"></i>
-              </div>
-          <% end %>
-
-    </div>
-  <% end %>
-</div>
-
-<% if current_user.pro? %>
-
-<h3 class="mx-5">BOOKINGS AWAITING YOUR CONFIRMATION</h3>
-
-    <div class="cards mx-5 mb-5">
-      <% @bookings_owner.each do |b| %>
-        <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020;">
           <div class="card-valide-booking">
             <h5><%= b.offer.name %></h5>
-            <div><span class="badge bg-custom" style="background: #01123C; color:white;" ></i> Status:<strong> <%=b.status %></strong></span></div>
-            <p>Pro <%=b.user.first_name %></p>
-            <p>Start date <%= b.start_at %></p>
-            <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
-            <p><strong><%= b.currency %> <%= b.amount %></strong></p>
+            <div><span class="badge bg-custom align-center" style="background: #01123C; color:white; font-size: 13px "></i> Status:<strong> <%=b.status %></strong></span></div>
+            <p>Pro <%=b.offer.user.first_name %></p>
+            <p><span class="mt-1">Start date <%= b.start_at %></p>
+            <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i><strong> Location <%= b.location %></strong></p>
+            <p><strong><%= b.amount %> <%= b.currency %></strong><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
           </div>
-          <% if b.status == "pending"  %>
+
+            <% if b.status == "pending"  %>
               <div class="buttons d-grid">
+                <%# <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i> %>
               </div>
-              <div >
-                <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-variant" %>
-                <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-deny" %>
+              <div>
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant justify-content-center" %>
+                <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-cancel"%>
               </div>
             <% end %>
             <% if b.status == "cancelled"  %>
-            <div class="buttons d-grid">
-              <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
-            </div>
-          <% end %>
-            <% if b.status == "accepted"  %>
               <div class="buttons d-grid">
-                <i style="font-size: 25px; color:green;" class="fa-solid fa-check"></i>
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
               </div>
             <% end %>
+            <% if b.status == "accepted"  %>
+                <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                  <i style="font-size: 25px; color:green;" class="fa-solid fa-face-smile"></i>
+                </div>
+            <% end %>
             <% if b.status == "denied"  %>
-              <div class="buttons d-grid">
-                <i style="font-size: 25px; color:red;" class="fa-solid fa-xmark"></i>
-              </div>
+                <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                  <i style="font-size: 25px; color:red;" class="fa-solid fa-face-frown"></i>
+                </div>
             <% end %>
         </div>
       <% end %>
+    </div>
+  </div>
+
+  <div class="col">
+    <% if current_user.pro? %>
+    <h3 class="mt-3 mx-5">BOOKINGS AWAITING YOUR CONFIRMATION</h3>
+      <div class="cards">
+        <% @bookings_owner.each do |b| %>
+
+          <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020;background-color:#ffe7db">
+
+            <div class="card-valide-booking">
+              <h5><%= b.offer.name %></h5>
+              <div><span class="badge bg-custom" style="background: #01123C; color:white;" ></i> Status:<strong> <%=b.status %></strong></span></div>
+              <p>Diver <%=b.user.first_name %></p>
+              <p>Start date <%= b.start_at %></p>
+              <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
+              <p><strong><%= b.currency %> <%= b.amount %></strong></p>
+            </div>
+
+            <% if b.status == "pending"  %>
+                <div class="buttons d-grid">
+                </div>
+                <div >
+                  <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-variant" %>
+                  <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-deny" %>
+                </div>
+              <% end %>
+              <% if b.status == "cancelled"  %>
+              <div class="buttons d-grid">
+                <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
+              </div>
+            <% end %>
+              <% if b.status == "accepted"  %>
+                <div class="buttons d-grid">
+                  <i style="font-size: 25px; color:green;" class="fa-solid fa-check"></i>
+                </div>
+              <% end %>
+              <% if b.status == "denied"  %>
+                <div class="buttons d-grid">
+                  <i style="font-size: 25px; color:red;" class="fa-solid fa-xmark"></i>
+                </div>
+              <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
-<% end %>
