--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -54,7 +54,7 @@
     </div>
   </div>
   <div class="offers px-5">
-      <h2 class="mx-4"><u>Experiences</u></h2>
+      <h2 class="mx-4"><u>Courses & Training</u></h2>
       <% @offers.each do |o| %>
 
           <div class="card-offers shadow-sm p-4">
