--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -91,17 +91,17 @@
   background-size: cover;
   background-position: top;
   height: 15vh;
-  background-image: url(/assets/VAGUE.png);
+  background-image: asset-url('VAGUE.png');
   /* margin-bottom: -4vh; */
   /* margin-left: -14vh; */
   width: 100%;
   top: -103px;
 }
 
-.vague-showpro {
-  height: 10vh;
-  background-image: url('VAGUE.png');
-}
+// .vague-showpro {
+//   height: 10vh;
+//   background-image: url('VAGUE.png');
+// }
 
 .divers{
   height: 10vh;
