--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -23,7 +23,7 @@
     <div class="d-flex justify-content-between infos-bookings">
       <div class= "quarter-info">
         <div class="d-flex justify-content-around" style="width 100%">
-          <div>
+          <div class="text-center">
             <p>Category:</p>
             <h3><%= @booking.offer.category %></h3>
           </div>
@@ -32,7 +32,7 @@
       </div>
       <div class= "quarter-info">
         <div class="d-flex justify-content-around" style="width 100%">
-          <div>
+          <div class="text-center">
             <p>Level:</p>
             <h3><%= @booking.offer.level %></h3>
           </div>
@@ -41,7 +41,7 @@
       </div>
       <div class="quarter-info">
         <div class="d-flex justify-content-around " style="width 100%">
-          <div>
+          <div class="text-center">
             <p>Number of dives:</p>
             <h3><%= @booking.offer.dives %></h3>
             </div>
@@ -50,7 +50,7 @@
       </div>
       <div class="quarter-info">
         <div class="d-flex justify-content-around " style="width 100%">
-          <div>
+          <div class="text-center">
             <p>Duration:</p>
             <h3><%= @booking.offer.duration %> <%= @booking.offer.unit_duration %></h3>
           </div>
