--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -13,39 +13,39 @@
 </div>
 <div class="d-flex w-100 align-items-start">
   <div class="w-75 p-5">
-    <div class="d-flex justify-content-between infos-offer">
-      <div class="quarter-info">
+    <div class="d-flex justify-content-between infos-bookings">
+      <div class= "quarter-info">
         <div class="d-flex justify-content-around" style="width 100%">
-          <div>
-            <p>Dive</p>
-            <h3><%= @offer.dives %></h3>
-          </div>
-          <div class="divider"></div>
-        </div>
-      </div>
-      <div class="quarter-info">
-        <div class="d-flex justify-content-around" style="width 100%">
-          <div >
+          <div class="text-center">
             <p>Category</p>
             <h3><%= @offer.category %></h3>
           </div>
           <div class="divider"></div>
         </div>
       </div>
-      <div class="quarter-info">
-        <div class="d-flex justify-content-around " style="width 100%">
-          <div >
-            <p>Duration</p>
-            <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
+      <div class= "quarter-info">
+        <div class="d-flex justify-content-around" style="width 100%">
+          <div class="text-center">
+            <p>Level</p>
+            <h3><%= @offer.level %></h3>
           </div>
           <div class="divider"></div>
         </div>
       </div>
-      <div class="quarter-info" style="width: fit-content;">
-        <div class="d-flex justify-content-between">
-          <div style="width 100%">
-            <p>Level</p>
-            <h3><%= @offer.level %></h3>
+      <div class="quarter-info">
+        <div class="d-flex justify-content-around " style="width 100%">
+          <div class="text-center">
+            <p>Number of dives</p>
+            <h3><%= @offer.dives %></h3>
+            </div>
+          <div class="divider"></div>
+        </div>
+      </div>
+      <div class="quarter-info">
+        <div class="d-flex justify-content-around " style="width 100%">
+          <div class="text-center">
+            <p>Duration</p>
+            <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
           </div>
         </div>
       </div>
