--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -16,7 +16,7 @@
     <div class="d-flex justify-content-between infos-offer">
       <div class="quarter-info">
         <div class="d-flex justify-content-around" style="width 100%">
-          <div>
+          <div class="text-center">
             <p>Dive</p>
             <h3><%= @offer.dives %></h3>
           </div>
@@ -25,7 +25,7 @@
       </div>
       <div class="quarter-info">
         <div class="d-flex justify-content-around" style="width 100%">
-          <div >
+          <div class="text-center">
             <p>Category</p>
             <h3><%= @offer.category %></h3>
           </div>
@@ -34,7 +34,7 @@
       </div>
       <div class="quarter-info">
         <div class="d-flex justify-content-around " style="width 100%">
-          <div >
+          <div class="text-center">
             <p>Duration</p>
             <h3><%= @offer.duration %> <%= @offer.unit_duration %></h3>
           </div>
@@ -43,7 +43,7 @@
       </div>
       <div class="quarter-info" style="width: fit-content;">
         <div class="d-flex justify-content-between">
-          <div style="width 100%">
+          <div class="text-center" style="width 100%">
             <p>Level</p>
             <h3><%= @offer.level %></h3>
           </div>
