--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,24 +1,22 @@
 <div class="row">
   <div class="col">
-    <h3 class="mt-3 mx-5">YOUR BOOKINGS</h3>
+    <h3 class="mt-3 mx-3">YOUR BOOKINGS</h3>
     <div class="cards">
       <% @bookings_user.each do |b| %>
 
         <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020; background-color: #DBE2F4">
 
           <div class="card-valide-booking">
-            <h5><%= b.offer.name %></h5>
-            <div><span class="badge bg-custom align-center" style="background: #01123C; color:white; font-size: 13px "></i> Status:<strong> <%=b.status %></strong></span></div>
-            <p>Pro <%=b.offer.user.first_name %></p>
-            <p><span class="mt-1">Start date <%= b.start_at %></p>
-            <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i><strong> Location <%= b.location %></strong></p>
-            <p><strong><%= b.amount %> <%= b.currency %></strong><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
+            <h6><%= b.offer.name %></h6>
+            <div><span class="badge bg-custom align-center" style="background: #01123C; color:white; font-size: 13px "></i> Status:<strong> <%=b.status.capitalize %></strong></span></div>
+            <p><%= b.offer.duration %> <%= b.offer.unit_duration %></p>
+            <p>with <%=b.offer.user.first_name %></p>
+            <p><span class="mt-1">begins on <%= b.start_at.strftime('%d-%m-%Y')%></p>
+            <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> <%= b.location %></p>
+            <p><strong><i><%= b.currency %> <%= b.amount %></strong></i><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
           </div>
 
             <% if b.status == "pending"  %>
-              <div class="buttons d-grid">
-                <%# <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i> %>
-              </div>
               <div>
                 <%= link_to "Details", booking_path(b), class: "btn btn-variant justify-content-center" %>
                 <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-cancel"%>
@@ -49,41 +47,46 @@
 
   <div class="col">
     <% if current_user.pro? %>
-    <h3 class="mt-3 mx-5">BOOKINGS AWAITING YOUR CONFIRMATION</h3>
+    <h3 class="mt-3 mx-3">BOOKINGS AWAITING YOUR CONFIRMATION</h3>
       <div class="cards">
         <% @bookings_owner.each do |b| %>
 
           <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020;background-color:#ffe7db">
 
             <div class="card-valide-booking">
-              <h5><%= b.offer.name %></h5>
-              <div><span class="badge bg-custom" style="background: #01123C; color:white;" ></i> Status:<strong> <%=b.status %></strong></span></div>
-              <p>Diver <%=b.user.first_name %></p>
-              <p>Start date <%= b.start_at %></p>
-              <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> Location <%= b.location %></p>
-              <p><strong><%= b.currency %> <%= b.amount %></strong></p>
+
+              <h6><%= b.offer.name %></h6>
+              <div><span class="badge bg-custom" style="background: #01123C; color:white;" ></i> Status:<strong> <%=b.status.capitalize %></strong></span></div>
+              <p><%= b.offer.duration %> <%= b.offer.unit_duration %></p>
+              <p>with <%=b.user.first_name %></p>
+              <p>begins on <%= b.start_at.strftime('%d-%m-%Y')%></p>
+              <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> <%= b.location %></p>
+              <p><i><strong><%= b.currency %> <%= b.amount %></strong></i></p>
             </div>
 
             <% if b.status == "pending"  %>
                 <div class="buttons d-grid">
                 </div>
                 <div >
-                  <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-variant" %>
                   <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-deny" %>
+                  <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-accept" %>
                 </div>
               <% end %>
               <% if b.status == "cancelled"  %>
               <div class="buttons d-grid">
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
                 <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
               </div>
             <% end %>
               <% if b.status == "accepted"  %>
                 <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
                   <i style="font-size: 25px; color:green;" class="fa-solid fa-check"></i>
                 </div>
               <% end %>
               <% if b.status == "denied"  %>
                 <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
                   <i style="font-size: 25px; color:red;" class="fa-solid fa-xmark"></i>
                 </div>
               <% end %>
