--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,10 @@
-<div class="banner-show-pro">
+<div class="banner-show-pro position-relative">
       <div class="text-center">
         <h2>Dashboard</h2>
         <h4>Welcome <%= current_user.first_name %>, 🤿</h4>
+      </div>
+      <div class="col-6 wave">
+      <%= image_tag 'wave-05.png', class: 'position-absolute bottom-0 end-0 w-50' %>
       </div>
 </div>
 
