--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -82,11 +82,11 @@
     <%= link_to "Back", :back, class: "btn btn-secondary" %>
     </div>
 
-  <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
+  <div class="validate-banner w-25 p-3 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
     <div class="mt-3 justify-content-between">
           <% if @booking.methods.include?(:messages) %>
-      <div class="container mt-5">
-        <div class="title-messager"><h3 id="messenger"><i class="fa-solid fa-comments"></i> Messagerie:</h3></div>
+      <div class="container">
+        <div class="title-messager text-center"><h3 id="messenger"><i class="fa-solid fa-comments"></i> Chat</h3></div>
         <div class="messages">
           <% @booking.messages.each do |message| %>
             <div id="message-<%= message.id %>">
@@ -100,16 +100,20 @@
               <p><%= message.content %></p>
             </div>
           <% end %>
+          <div class="chat">
           <%= simple_form_for [@booking, @message],
             html: {class: "d-flex"} do |f|
             %>
             <%= f.input :content,
                         label: false,
-                        placeholder: "Type a message",
+                        placeholder: "begin conversation...",
                         wrapper_html: {class: "flex-grow-1"}
                         %>
-            <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+            <button name="button" type="submit" class="btn btn-primary">
+              <i class="fa-solid fa-paper-plane"></i>
+            </button>
           <% end %>
+          </div>
         </div>
       </div>
     <% end %>
