--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -29,6 +29,7 @@
           <div class="card-infos font-weight-light background-white p-3">
             <div>
                 <h2><%= p.first_name %> <%= p.last_name[0].capitalize%>.</h2>
+                 <i class="fas fa-star star-yellow"></i> <%= p.pro_average_rating %>
                 <p><%= truncate p.bio, length: 100 %></p>
                 <span class="underline">Read more</span>
                 <p><i style="color:#477E9F d-flex" class="fa-solid fa-location-dot"></i> <%= p.location %></p>
