--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -60,7 +60,7 @@
     <%= link_to "Back", :back, class: "btn btn-secondary" %>
   </div>
   <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
-    <div class="mt-3 justify-content-between">
+    <div class="justify-content-between">
       <h4>When do you want to dive?</h4>
       <%= simple_form_for [@offer, @booking], data: { controller: 'flatpickr' } do |f| %>
         <%= f.error_notification %>
