add and edit offer on dashboard

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -30,7 +30,7 @@
   border-radius: 100px;
   background-color: white;
   display: block;
-  // padding: 0px 10px 0px 10px;
+  padding: 5px 0px 5px 0px;
   border: 1px solid #e7e7e9;
   justify-content: left !important;
     i {
@@ -46,8 +46,8 @@
     }
     .btn-primary {
       border-radius: 100px;
-      margin: 3px;
-      margin-left: 40px;
+      // margin: 3px;
+      // margin-left: 40px;
     }
 }
 
