--- a/app/views/pages/_offers.html.erb
+++ b/app/views/pages/_offers.html.erb
@@ -1,3 +1,10 @@
+<div class="mt-3 ms-3">
+    <%= link_to new_offer_path, class:"btn btn-secondary"  do %>
+      Add a new Offer <i class="fa-solid fa-plus"></i>
+    <% end %>
+</div>
+
+
 <div class="offers mx-5">
   <% @offers.each do |o| %>
     <div class="card-offers shadow-sm p-4">
@@ -9,7 +16,12 @@
         </div>
         <p><%= link_to offer_path(o), class:"btn btn-primary"  do %>
             View Offer <i class="fa-solid fa-arrow-right-long"></i>
-        <% end %></p>
+        <% end %>
+        <%= link_to edit_offer_path(o), class:"btn btn-success"  do %>
+            Edit Offer <i class="fa-solid fa-pen"></i>
+        <% end %>
+
+        </p>
       </div>
       <div class="card-offers-bottom">
       </div>
