--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -106,7 +106,7 @@
             %>
             <%= f.input :content,
                         label: false,
-                        placeholder: "begin conversation...",
+                        placeholder: "Start conversation...",
                         wrapper_html: {class: "flex-grow-1"}
                         %>
             <button name="button" type="submit" class="btn btn-primary">
