--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -25,7 +25,7 @@
     <%= link_to "Back", :back, class: "btn btn-secondary" %>
   </div>
 <div class="d-flex px-5">
-  <div class="col-4 px-5">
+  <div class="col-4">
     <strong>
     <p>Category</p>
     <div class="mb-3">
