--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -52,7 +52,7 @@
       <%= hidden_field_tag :category, params[:category] %>
       <%= hidden_field_tag :level, params[:level] %>
       <button name="button" type="submit" class="btn btn-filtre">
-          <i class="fas fa-search" style="color: orange"></i>
+          <i class="fas fa-search" style="color: black"></i>
       </button>
 
     <% end %>
