--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -51,7 +51,7 @@
       %>
       <%= hidden_field_tag :category, params[:category] %>
       <%= hidden_field_tag :level, params[:level] %>
-      <button name="button" type="submit" class="btn btn-filtre">
+      <button name="button" type="submit" class="btn btn-primary">
           <i class="fas fa-search" style="color: black"></i>
       </button>
 
